@@ -225,3 +225,4 @@ Change list for PernMangband
 
 23/10/2001
 - Confusion brand PvP bug fixed ;)
+- Wraith in own houses added. Tested, no bugs seen.
